deploy pkg using glitter

--- a/vignettes/genomic-domain.Rmd
+++ b/vignettes/genomic-domain.Rmd
@@ -77,4 +77,12 @@ omop_graph <-
 print(omop_graph)
 ```
 
+```{r}
+chariotViz(
+  omop_graph = omop_graph,
+  force = TRUE, 
+  width = 2000,
+  height = 2000
+)
+```
 
